--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vis-network": "^9.1.9"
+    "force-graph": "^1.43.5",
+    "react-force-graph-2d": "^1.25.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
